# gedaechtnas

./: .prettierignore  .prettierrc  Cargo.toml  README.md  ideas.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.ts
.github/workflows/: build.yml
gdn/: Cargo.toml
gdn-app/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gdn-app/src/: App.vue  api.ts  main.ts  types.ts  util.ts
gdn-app/src-tauri/: Cargo.toml  tauri.conf.json
gdn-app/src-tauri/icons/: icon.icns
gdn-app/src-tauri/src/: api.rs  ids.rs  lib.rs  main.rs  state.rs  store.rs  types.rs
gdn-app/src/components/: CNavbar.vue  CNavbarButton.vue  CNavbarDropdown.vue  CNavbarDropdownEntry.vue  CNote.vue  CNoteButton.vue  CNoteChildEditor.vue  CNoteCreator.vue  CNoteEditor.vue  Navbar.vue  NavbarDropdown.vue  Test.vue
gdn-app/src/lib/: assert.ts  path.ts
gdn-app/src/stores/: foo.ts  notes.ts  pinned.ts  repos.ts  ui.ts
gdn-cli/: Cargo.toml
gdn-cli/src/: commands.rs  main.rs
gdn-cli/src/commands/: init.rs  migrate.rs  note.rs  repo.rs  status.rs  tidy.rs
gdn-cli/src/commands/note/: add.rs  list.rs
gdn-cli/src/commands/repo/: add.rs  list.rs  remove.rs  rename.rs  select.rs  show.rs
gdn/src/: data.rs  ids.rs  lib.rs  paths.rs  repo.rs  store.rs
gdn/src/data/: datadir.rs  lockfile.rs  v0.rs  v1.rs
gdn/src/repo/: v0.rs  v1.rs
meta/: build  build_android  check  clean  dev  dev-android  fmt  fmt-check  install-android  setup  update-pnpm
src/: commands.rs  main.rs
