[workspace]
resolver = "3"
members = ["gdn", "gdn-cli", "gdn-app/src-tauri"]
default-members = ["gdn-cli"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive", "deprecated"] }
directories = "6.0.0"
gdn = { path = "gdn" }
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
jiff = "0.2.14"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = [] }
tauri-build = { version = "2.2.0", features = [] }
tauri-plugin-opener = "2.2.7"

[workspace.lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.let_underscore_drop = "warn"
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"
