[package]
name = "gdn"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
git2 = { workspace = true }
jiff = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
